# platform-service/src/main/java/ee/himaster/platform/services/model/quiz/answer/AnswerOptionModel.java
@@ -1,4 +1,4 @@
-package ee.himaster.platform.services.model.quiz.answer.option;
+package ee.himaster.platform.services.model.quiz.answer;
 
 import ee.himaster.core.localization.model.LocalizedStringModel;
 import ee.himaster.core.service.model.ItemModel;
@@ -12,16 +12,14 @@ import lombok.Setter;
 @Getter
 @Setter
 @Entity(name = "answer_option")
-@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
-@DiscriminatorColumn(name="answer_option_type",
-        discriminatorType = DiscriminatorType.STRING)
-public abstract class AnswerOptionModel extends ItemModel {
+public class AnswerOptionModel extends ItemModel {
 
     @ManyToOne(cascade = CascadeType.ALL)
     @JoinColumn(name = "label")
     private LocalizedStringModel label;
 
-    private String qualifier;
+    @Column(name = "facet_value")
+    private String facetValue;
 
     private int priority;
 
