# platform-service/src/main/java/ee/himaster/platform/services/model/quiz/answer/option/InputNumericAnswerOptionModel.java
@@ -1,13 +1,0 @@
-package ee.himaster.platform.services.model.quiz.answer.option;
-
-import javax.persistence.DiscriminatorValue;
-import javax.persistence.Entity;
-import lombok.Getter;
-import lombok.Setter;
-
-@Getter
-@Setter
-@Entity
-@DiscriminatorValue("INPUT_NUMERIC")
-public class InputNumericAnswerOptionModel extends AnswerOptionModel {
-}
