# platform-service/src/main/java/ee/himaster/platform/services/model/quiz/answer/option/SelectiveBooleanAnswerOptionModel.java
@@ -1,22 +1,0 @@
-package ee.himaster.platform.services.model.quiz.answer.option;
-
-import ee.himaster.core.localization.model.LocalizedStringModel;
-
-import javax.persistence.*;
-
-import lombok.Getter;
-import lombok.Setter;
-
-@Getter
-@Setter
-@Entity
-@DiscriminatorValue("SELECTIVE_BOOLEAN")
-public class SelectiveBooleanAnswerOptionModel extends AnswerOptionModel {
-
-    @Column(name = "boolean_value")
-    private Boolean value;
-
-    @ManyToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "title")
-    private LocalizedStringModel title;
-}
