# platform-service/src/main/java/ee/himaster/platform/services/model/quiz/answer/option/SelectiveNumericAnswerOptionModel.java
@@ -1,18 +1,0 @@
-package ee.himaster.platform.services.model.quiz.answer.option;
-
-import lombok.Getter;
-import lombok.Setter;
-
-import javax.persistence.Column;
-import javax.persistence.DiscriminatorValue;
-import javax.persistence.Entity;
-
-@Getter
-@Setter
-@Entity
-@DiscriminatorValue("SELECTIVE_NUMERIC")
-public class SelectiveNumericAnswerOptionModel extends AnswerOptionModel {
-
-    @Column(name = "integer_value")
-    private Integer value;
-}
